TeamsSSOProvider and Node.js sample (#1038)
* SSO to TeamsProvider and Node sample

* Some minor changes

* Merge branch 'main' of https://github.com/microsoftgraph/microsoft-graph-toolkit into simonagen/teamssso

* Added electron app

* delete

* Added electron sample folder

* Added electron sample folder

* Added electron sample folder

* Updated readme, added example manifest and removed unecessary scopes

* added electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Electron provider

* Update README.md

* Added license

* Cleaned up license

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update samples/electron-app/package.json

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Update packages/providers/mgt-electron-provider/README.md

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Review comments & removed cache plugin

* Update packages/providers/mgt-electron-provider/src/Authenticator/CustomFileProtocol.ts

Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

* Changed initialization of ElectronAuthenticator

* updated sample readme

* Update README.md

* Removed all evidence of incremental consent support :P

* Warning

* Added some stuff

* cleaned up service a bit

* MSAL2.0

* msal2 silent

* Added msal2 custom element and sso

* SSO fix

* Added event on account switch

* Fixed issue with setActiveAccount related to latest msal-browser package

* Bumped up package version

* temp fix

* Single account

* Added new test file

* Update msal2-provider-test.html

* Single account changes

* Comments

* Added msal2.0 provi

--- a/packages/providers/mgt-teams-sso-provider/package.json
+++ b/packages/providers/mgt-teams-sso-provider/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "@microsoft/mgt-msal2-provider",
+  "name": "@microsoft/mgt-teams-sso-provider",
   "version": "2.0.0",
-  "description": "The Microsoft Graph Toolkit Msal 2.0 Provider",
+  "description": "The Microsoft Graph Toolkit Teams Single Sign-On Provider",
   "keywords": [
     "microsoft graph",
     "microsoft graph toolkit",
+    "microsoft teams",
+    "teams",
     "mgt",
     "msal",
-    "auth",
     "msal 2.0",
-    "authentication"
+    "auth",
+    "authentication",
+    "sso"
   ],
   "homepage": "https://github.com/microsoftgraph/microsoft-graph-toolkit",
   "bugs": {
@@ -40,6 +43,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
+    "@microsoft/mgt-msal2-provider": "*",
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "@azure/msal-browser": "^2.14.2"
   },
