updated to  graph client 3.0.0

--- a/packages/providers/mgt-electron-provider/package.json
+++ b/packages/providers/mgt-electron-provider/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.0.3",
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-client": "^3.0.0-Preview.2",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "electron": "^11.0.2"
   },
   "publishConfig": {
