--- a/packages/mgt-components/package.json
+++ b/packages/mgt-components/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-client": "^3.0.0-Preview.2",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "@microsoft/microsoft-graph-types": "^2.0.0",
     "@microsoft/microsoft-graph-types-beta": "^0.13.0-preview",
     "@fluentui/web-components": "^0.22.1",
