--- a/packages/providers/mgt-msal-provider/package.json
+++ b/packages/providers/mgt-msal-provider/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-client": "^3.0.0-Preview.2",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "msal": "^1.4.10"
   },
   "publishConfig": {
