--- a/packages/providers/mgt-proxy-provider/package.json
+++ b/packages/providers/mgt-proxy-provider/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@microsoft/mgt-element": "*",
-    "@microsoft/microsoft-graph-client": "^3.0.0-Preview.2"
+    "@microsoft/microsoft-graph-client": "^3.0.0"
   },
   "publishConfig": {
     "directory": "dist"
