--- a/samples/proxy-provider-asp-net-mvc/graph-tutorial/packages.config
+++ b/samples/proxy-provider-asp-net-mvc/graph-tutorial/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Azure.Core" version="1.18.0" targetFramework="net472" />
   <package id="bootstrap" version="4.3.1" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -12,27 +13,37 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.Graph" version="1.17.0" targetFramework="net472" />
-  <package id="Microsoft.Graph.Core" version="1.17.0" targetFramework="net472" />
-  <package id="Microsoft.Identity.Client" version="4.3.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
+  <package id="Microsoft.Graph" version="4.3.0" targetFramework="net472" />
+  <package id="Microsoft.Graph.Core" version="2.0.4" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.35.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.12.2" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.14.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.12.2" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
