--- a/samples/proxy-provider-node/package.json
+++ b/samples/proxy-provider-node/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.0.0-alpha.14",
+    "@azure/msal-node": "^1.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
