Adding support for TeamsFx + sample

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,11 @@
     "source.fixAll.tslint": true
   },
   "cSpell.words": ["Templated", "flyout", "semibold", "xmlns"],
-  "tslint.configFile": "./tslint.json"
+  "tslint.configFile": "./tslint.json",
+  "markdownlint.config": {
+    "MD028": false,
+    "MD025": {
+      "front_matter_title": ""
+    }
+  }
 }
