--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "samples/angular-app",
     "samples/vue-app",
     "samples/electron-app",
-    "samples/sp-webpart"
+    "samples/sp-webpart",
+    "samples/teamsfx-app/tabs"
   ],
   "scripts": {
     "build": "npm run prettier:check && npm run clean && lerna run build --scope @microsoft/*",
