--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "lit-element": "2.5.0",
     "monaco-editor": "^0.19.3",
     "monaco-editor-webpack-plugin": "^1.8.2",
+    "node-sass": "npm:sass@^1.44.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "react": "^17.0.1",
@@ -116,8 +117,7 @@
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.7.5",
     "web-component-analyzer": "^1.1.6",
-    "whatwg-fetch": "^3.5.0",
-    "node-sass": "npm:sass@^1.44.0"
+    "whatwg-fetch": "^3.5.0"
   },
   "husky": {
     "hooks": {
