--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build CI
+name: Build a PR and deploy it to storybook
 
 on:
   pull_request:
@@ -26,13 +26,22 @@ jobs:
       - run: node scripts/setVersion.js --next
       - run: yarn build
       - run: yarn run pack
+
       - name: Upload a Build Artifact - package
         uses: actions/upload-artifact@v2
         with:
           name: npm-packages
           path: artifacts/*
+
       - name: Upload a Build Artifact - bundle
         uses: actions/upload-artifact@v2
         with:
           name: bundle
           path: packages/mgt/dist/bundle
+
+      - name: Deploy mgt.dev/${{ github.event.number }} 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: storybook-static
+          target-folder: ${{ github.event.number }}
