--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -32,8 +32,9 @@ jobs:
           yarn storybook:build
 
       - name: Deploy mgt.dev/next 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.1
+        uses: JamesIves/github-pages-deploy-action@4.2.2
         with:
           branch: gh-pages
           folder: storybook-static
           target-folder: next
+          clean-exclude: next/pr
