--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -46,9 +46,6 @@ jobs:
       matrix:
         node-version: [12.x]
 
-    environment:
-      name: storybook
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -64,7 +61,7 @@ jobs:
           yarn build
           yarn storybook:build
 
-      - name: Deploy mgt.dev/next/${{ github.event.number }} 🚀
+      - name: Deploy mgt.dev/next/pr/${{ github.event.number }} 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
