--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -68,3 +68,9 @@ jobs:
           branch: gh-pages
           folder: storybook-static
           target-folder: next/pr/${{ github.event.number }}
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: 'The updated storybook is available [here](https://mgt.dev/next/pr/${{ github.event.number }})'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
