--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build CI
+name: Deploy main storybook
 
 on:
   push:
@@ -37,3 +37,4 @@ jobs:
           branch: gh-pages
           folder: storybook-static
           target-folder: next
+          clean-exclude: next/pr
