--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -37,4 +37,4 @@ jobs:
           branch: gh-pages
           folder: storybook-static
           target-folder: next
-          clean-exclude: next/pr
+          clean-exclude: pr
