--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -68,6 +68,7 @@ jobs:
           branch: gh-pages
           folder: storybook-static
           target-folder: next/pr/${{ github.event.number }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
