--- a/.github/workflows/pr-storybook.yml
+++ b/.github/workflows/pr-storybook.yml
@@ -1,48 +1,17 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: PR (Build + Storybook)
+name: Deploy pr storybook
 
 on:
   pull_request:
+    types: [labeled]
     branches: [main, release/**, next/**]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install -g yarn
-      - run: yarn
-      - run: node scripts/setVersion.js --next
-      - run: yarn build
-      - run: yarn run pack
-
-      - name: Upload a Build Artifact - package
-        uses: actions/upload-artifact@v2
-        with:
-          name: npm-packages
-          path: artifacts/*
-
-      - name: Upload a Build Artifact - bundle
-        uses: actions/upload-artifact@v2
-        with:
-          name: bundle
-          path: packages/mgt/dist/bundle
-
   storybook:
     if: "contains(github.event.pull_request.labels.*.name, 'Build: Storybook')"
     runs-on: ubuntu-latest
-    needs: build
 
     strategy:
       matrix:
