Adding types to respond to PRs labels

--- a/.github/workflows/pr-storybook.yml
+++ b/.github/workflows/pr-storybook.yml
@@ -5,6 +5,7 @@ name: Deploy pr storybook
 
 on:
   pull_request:
+    types: [opened, labeled, synchronize]
     branches: [main, release/**, next/**]
 
 jobs:
