--- a/.github/workflows/pr-storybook.yml
+++ b/.github/workflows/pr-storybook.yml
@@ -5,7 +5,7 @@ name: Deploy pr storybook
 
 on:
   pull_request:
-    types: [opened, labeled, synchronize]
+    types: [opened, labeled, synchronize, reopened]
     branches: [main, release/**, next/**]
 
 jobs:
