--- a/.github/workflows/pr-clean-storybook.yml
+++ b/.github/workflows/pr-clean-storybook.yml
@@ -1,16 +1,17 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Deploy main storybook
+name: Clean pr storybook
 
 on:
-  push:
-    branches: [main]
+  pull_request:
+    types: [closed]
+    branches: [main, release/**, next/**]
 
 jobs:
-  build:
+  storybook:
+    if: "contains(github.event.pull_request.labels.*.name, 'Build: Storybook')"
     runs-on: ubuntu-latest
-    if: github.repository == 'microsoftgraph/microsoft-graph-toolkit'
 
     strategy:
       matrix:
@@ -18,24 +19,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: gh-pages
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Build 🛠
-        run: |
-          npm install -g yarn lerna
-          yarn
-          yarn build
-          yarn storybook:build
-
-      - name: Deploy mgt.dev/next 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages
-          folder: storybook-static
-          target-folder: next
-          clean-exclude: pr
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git rm -r next/pr/${{ github.event.number }}
+          git commit -m "PR ${{ github.event.number }} closed"
+          git push
