--- a/.github/workflows/pr-storybook.yml
+++ b/.github/workflows/pr-storybook.yml
@@ -1,16 +1,17 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Deploy main storybook
+name: Deploy pr storybook
 
 on:
-  push:
-    branches: [main]
+  pull_request:
+    types: [opened, labeled, synchronize, reopened]
+    branches: [main, release/**, next/**]
 
 jobs:
-  build:
+  storybook:
+    if: "contains(github.event.pull_request.labels.*.name, 'Build: Storybook')"
     runs-on: ubuntu-latest
-    if: github.repository == 'microsoftgraph/microsoft-graph-toolkit'
 
     strategy:
       matrix:
@@ -31,11 +32,16 @@ jobs:
           yarn build
           yarn storybook:build
 
-      - name: Deploy mgt.dev/next 🚀
+      - name: Deploy mgt.dev/next/pr/${{ github.event.number }} 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
           folder: storybook-static
-          target-folder: next
-          clean-exclude: pr
+          target-folder: next/pr/${{ github.event.number }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: 'The updated storybook is available [here](https://mgt.dev/next/pr/${{ github.event.number }})'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
