--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: PR (Build + Storybook)
+name: Build pr
 
 on:
   pull_request:
@@ -38,39 +38,3 @@ jobs:
         with:
           name: bundle
           path: packages/mgt/dist/bundle
-
-  storybook:
-    runs-on: ubuntu-latest
-    needs: build
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Build 🛠
-        run: |
-          npm install -g yarn lerna
-          yarn
-          yarn build
-          yarn storybook:build
-
-      - name: Deploy mgt.dev/next/pr/${{ github.event.number }} 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages
-          folder: storybook-static
-          target-folder: next/pr/${{ github.event.number }}
-
-      - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v1
-        with:
-          message: 'The updated storybook is available [here](https://mgt.dev/next/pr/${{ github.event.number }})'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
