--- a/packages/providers/mgt-teamsfx-provider/package.json
+++ b/packages/providers/mgt-teamsfx-provider/package.json
@@ -42,6 +42,9 @@
   "peerDependencies": {
     "@microsoft/teamsfx": "^0.5.0-rc.0"
   },
+  "devDependencies": {
+    "@microsoft/teamsfx": "^0.5.0-rc.0"
+  },
   "dependencies": {
     "@microsoft/mgt-element": "*"
   },
