Update teamsfx version to 0.5.0

--- a/packages/providers/mgt-teamsfx-provider/package.json
+++ b/packages/providers/mgt-teamsfx-provider/package.json
@@ -40,10 +40,10 @@
     "postpack": "cpx *.tgz ../../../artifacts"
   },
   "peerDependencies": {
-    "@microsoft/teamsfx": "^0.5.0-rc.0"
+    "@microsoft/teamsfx": "^0.5.0"
   },
   "devDependencies": {
-    "@microsoft/teamsfx": "^0.5.0-rc.0"
+    "@microsoft/teamsfx": "^0.5.0"
   },
   "dependencies": {
     "@microsoft/mgt-element": "*"
