--- a/packages/providers/mgt-teamsfx-provider/package.json
+++ b/packages/providers/mgt-teamsfx-provider/package.json
@@ -40,10 +40,10 @@
     "postpack": "cpx *.tgz ../../../artifacts"
   },
   "peerDependencies": {
-    "@microsoft/teamsfx": "^0.6.0"
+    "@microsoft/teamsfx": "0.6.0-beta.0"
   },
   "devDependencies": {
-    "@microsoft/teamsfx": "^0.6.0"
+    "@microsoft/teamsfx": "0.6.0-beta.0"
   },
   "dependencies": {
     "@microsoft/mgt-element": "*"
