--- a/samples/vue-app/package.json
+++ b/samples/vue-app/package.json
@@ -20,5 +20,9 @@
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.5.21"
+  },
+  "overrides": {
+    "node-ipc@>9.2.1 <10": "9.2.1",
+    "node-ipc@>10.1.0": "10.1.0"
   }
 }
