--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -37,5 +37,7 @@ jobs:
           branch: gh-pages
           folder: storybook-static
           target-folder: next
-          clean-exclude: pr
+          clean-exclude: | 
+            pr
+            fluentui
           token: ${{ secrets.GITHUB_TOKEN }}
